<!-- res/layout/dialog_tags.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_title_recipe_details_show_additional_info"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="16dp" />

            <TextView
                android:id="@+id/diet_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_message_recipe_details_diet_tags"
                android:textSize="16sp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/health_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_message_recipe_details_health_tags"
                android:textSize="16sp"
                android:paddingBottom="16dp" />

            <TextView
                android:id="@+id/nutrition_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_title_recipe_details_nutritional_info"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <!-- Dynamic TextViews for each nutritional info item -->
            <TextView
                android:id="@+id/nutrition_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/co2_emissions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_message_recipe_details_co2_emission"
                android:textSize="16sp"
                android:paddingTop="16dp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close_button"
        style="@style/SecondaryActionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_gravity="end" />
</LinearLayout>
