<!-- res/layout/dialog_confirm_with_message.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="8dp" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_message"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingTop="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_no"
            style="@style/SecondaryActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/no" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_yes"
            style="@style/ActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:padding="4dp"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>
